User registration controller & code changes